--- a/index.html
+++ b/index.html
@@ -6,23 +6,42 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body class="p-4">
-  <h2 class="mb-3">Listado de Series</h2>
+  <div class="container">
+    <h2 class="mb-3">Listado de Series</h2>
+    <div class="row">
+      <!-- Columna izquierda: tabla -->
+      <div class="col-md-8">
+        <table class="table table-striped table-bordered">
+          <thead class="thead-dark">
+            <tr>
+              <th>ID</th>
+              <th>Nombre</th>
+              <th>Canal</th>
+              <th>Temporadas</th>
+            </tr>
+          </thead>
+          <tbody id="series-table-body"></tbody>
+        </table>
 
-  <table class="table table-striped table-bordered">
-    <thead class="thead-dark">
-      <tr>
-        <th>ID</th>
-        <th>Nombre</th>
-        <th>Canal</th>
-        <th>Temporadas</th>
-      </tr>
-    </thead>
-    <tbody id="series-table-body"></tbody>
-  </table>
+        <p id="promedio" class="mt-3 font-weight-bold"></p>
+      </div>
 
+      <!-- Columna derecha: detalle -->
+      <div class="col-md-4">
+        <div id="serie-detalle" class="card d-none">
+          <img id="detalle-imagen" class="card-img-top" alt="Imagen de la serie">
+          <div class="card-body">
+            <h5 id="detalle-nombre" class="card-title"></h5>
+            <p id="detalle-descripcion" class="card-text"></p>
+            <a id="detalle-url" href="#" target="_blank" class="btn btn-primary">Ver más</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Importante: primero Serie.js, luego main.js -->
   <script src="./dist/Serie.js"></script>
-  <script src="./dist/data.js"></script>
-  <script src="./dist/index.js"></script>
+  <script src="./dist/main.js"></script>
 </body>
 </html>
-
